force-app/main/default/objects/Info_Related_To_Hl7Result__c/Info_Related_To_Hl7Result__c.object-meta.xml
<CustomObject>
    <label>Info_Related_To_Hl7Result</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Info_Related_To_Hl7Results_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Info_Related_To_Hl7Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>