force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/LabOrder_HL7_Results_ID__c.field-meta.xml
<CustomField>
    <fullName>LabOrder_HL7_Results_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LabOrder HL7 Results_ID</label>
    <referenceTo>HL7__c</referenceTo>
    <relationshipLabel>Info_Related_To_Hl7Results</relationshipLabel>
    <relationshipName>Info_Related_To_Hl7Results</relationshipName>
    <type>Lookup</type>
</CustomField>