force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/MSH_DateTime_of_Message__c.field-meta.xml
<CustomField>
    <fullName>MSH_DateTime_of_Message__c</fullName>
    <label>MSH_DateTime of Message</label>
    <type>DateTime</type>
</CustomField>