force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/MSH_Message_Type__c.field-meta.xml
<CustomField>
    <fullName>MSH_Message_Type__c</fullName>
    <label>MSH_Message Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>