force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/MSH_Processing_ID__c.field-meta.xml
<CustomField>
    <fullName>MSH_Processing_ID__c</fullName>
    <label>MSH_Processing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>