force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/MSH_Receiving_Application__c.field-meta.xml
<CustomField>
    <fullName>MSH_Receiving_Application__c</fullName>
    <label>MSH_Receiving Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>