force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/ORC_DateTime_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ORC_DateTime_of_Transaction__c</fullName>
    <label>ORC_DateTime of Transaction</label>
    <type>DateTime</type>
</CustomField>