force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/ORC_Filler_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ORC_Filler_Order_Number__c</fullName>
    <label>ORC_Filler Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>