force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/ORC_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>ORC_Order_Status__c</fullName>
    <label>ORC_Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>