force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/ORC_Physician_identifier__c.field-meta.xml
<CustomField>
    <fullName>ORC_Physician_identifier__c</fullName>
    <label>ORC_Physician identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>