force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/ORC_PhysicianLastName__c.field-meta.xml
<CustomField>
    <fullName>ORC_PhysicianLastName__c</fullName>
    <label>ORC_PhysicianLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>