force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Address2__c.field-meta.xml
<CustomField>
    <fullName>PID_Address2__c</fullName>
    <label>PID_Address2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>