force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_City__c.field-meta.xml
<CustomField>
    <fullName>PID_City__c</fullName>
    <label>PID_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>