force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>PID_Date_of_Birth__c</fullName>
    <label>PID_Date of Birth</label>
    <type>Date</type>
</CustomField>