force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PID_Patient_First_Name__c</fullName>
    <label>PID_Patient First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>