force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Patient_ID_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PID_Patient_ID_External_ID__c</fullName>
    <label>PID_Patient ID (External ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>