force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Patient_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>PID_Patient_Street_Address__c</fullName>
    <label>PID_Patient Street Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>