force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Phone_Number_Home__c.field-meta.xml
<CustomField>
    <fullName>PID_Phone_Number_Home__c</fullName>
    <label>PID_Phone Number – Home</label>
    <length>255</length>
    <type>Text</type>
</CustomField>