force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Set_ID_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>PID_Set_ID_Patient_ID__c</fullName>
    <label>PID_Set ID _Patient ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>