force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_SSN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PID_SSN_Patient__c</fullName>
    <label>PID_SSN - Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>