force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_State__c.field-meta.xml
<CustomField>
    <fullName>PID_State__c</fullName>
    <label>PID_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>