force-app/main/default/objects/Info_Related_To_Hl7Result__c/fields/PID_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PID_Zip_Code__c</fullName>
    <label>PID_Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>